# async-observer-rs

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
benches/: bench_observer.rs
examples/: observer.rs  observers.rs
src/: lib.rs
src/observers/: channel.rs  email.rs  file_logger.rs  http.rs  mail.rs  mod.rs  websocket.rs
