[package]
name = "async-observer"
version = "0.1.0"
edition = "2024"

[lib]
name = "async_observer"
path = "src/lib.rs"

[dependencies]
futures = "0.3"
parking_lot = "0.12"
async-trait = "0.1"
tracing = { version = "0.1", optional = true }
lettre = { version = "0.11.18", default-features = false, features = ["tokio1-rustls",
    "ring",
    "webpki-roots","builder"], optional = true }
url = "2.5.7"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = "0.3"

[features]
default = ["logging", "mail-observer", "websocket-observer"]
logging = ["dep:tracing"]
mail-observer = ["dep:lettre"]
websocket-observer = []

[[example]]
name = "observer"

[workspace.lints.clippy]
# Enforce correctness and best practices
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
# Strict: pedantic + nursery for consistency and future-proofing
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Safety restrictions
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Documentation discipline
missing_docs = "warn"
missing_const_for_fn = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
# Project-specific overrides
needless_return = "allow" # stylistic choice

unsafe_code = "forbid"
