[package]
name = "async-observer"
version = "0.1.0"
edition = "2024"

[lib]
name = "async_observer"
path = "src/lib.rs"

[dependencies]
futures = "0.3"
parking_lot = "0.12"
async-trait = "0.1"
tracing = { version = "0.1", optional = true }
dashmap = "6.1.0"
lettre = { version = "0.11.18", default-features = false, features = ["smtp-transport", "tokio1-native-tls", "builder"], optional = true }
reqwest = { version = "0.12.23", features = ["json"], optional = true }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.143", optional = true }
tokio = { version = "1", features = ["fs", "sync"], optional = true }
tokio-tungstenite = { version = "0.27.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = "0.3"
criterion = { version = "0.7", features = ["async_tokio"] }

[features]
default = ["observers"]
logging = ["dep:tracing"]
# observers
observers = ["observer-channel", "observer-email", "observer-file-logger", "observer-http", "observer-websocket"]
observer-channel = ["dep:tokio"]
observer-email = ["dep:lettre"]
observer-file-logger = ["dep:serde_json", "dep:tokio"]
observer-http = ["reqwest", "serde"]
observer-websocket = ["dep:serde_json", "dep:tokio-tungstenite"]

[[bench]]
name = "bench_observer"
harness = false

[workspace.lints.clippy]
# Enforce correctness and best practices
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
# Strict: pedantic + nursery for consistency and future-proofing
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Safety restrictions
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Documentation discipline
missing_docs = "warn"
missing_const_for_fn = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
# Project-specific overrides
needless_return = "allow" # stylistic choice

unsafe_code = "forbid"
